--- a/08:Creating Parallax Effect/index.html
+++ b/08:Creating Parallax Effect/index.html
@@ -1,75 +1,17 @@
-// html setup
-var itemsHTMLCollection = document.getElementsByClassName("parallax-item");
-var itemsArray = Array.from(itemsHTMLCollection);
+<html lang="en">
 
-console.log("itemsArray", itemsArray);
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="index.js" defer></script>
+    <script src="app.js" defer></script>
+</head>
 
-// input Setup
-var input = {
-mouseX: {
-start: 0,
-end: window.innerWidth,
-current: 0
-},
-mouseY: {
-start: 0,
-end: window.innerHeight,
-current: 0
-}
-};
+<body>
+    <div class="parallax-item" data-depth="0.1" style="background-color:black;"></div>
+    <div class="parallax-item" data-depth="0.3" style="background-color:#EF5350;"></div>
+    <div class="parallax-item" data-depth="0.6" style="background-color:#42A5F5;"></div>
+</body>
 
-input.mouseX.range = input.mouseX.end - input.mouseX.start;
-input.mouseY.range = input.mouseY.end - input.mouseY.start;
-
-// output Setup
-var output = {
-x: {
-start: -150,
-end: 100,
-current: 0
-},
-y: {
-start: -100,
-end: 125,
-current: 0
-}
-};
-
-output.x.range = output.x.end - output.x.start;
-output.y.range = output.y.end - output.y.start;
-
-var handleMouseMove = function (event) {
-// mouse x input
-input.mouseX.current = event.clientX;
-input.mouseX.fraction =
-(input.mouseX.current - input.mouseX.start) / input.mouseX.range;
-
-// mouse y input
-input.mouseY.current = event.clientY;
-input.mouseY.fraction =
-(input.mouseY.current - input.mouseY.start) / input.mouseY.range;
-
-// output x
-output.x.current = output.x.end - input.mouseX.fraction * output.x.range;
-
-//output y
-output.y.current = output.y.end - input.mouseY.fraction * output.y.range;
-
-// apply output to html
-itemsArray.forEach(function (item, i) {
-item.style.transform =
-"translate(" + output.x.current + "px, " + output.y.current + "px)";
-});
-
-// logs
-};
-
-var handleResize = function (event) {
-input.mouseX.end = window.innerWidth;
-input.mouseX.range = input.mouseX.end - input.mouseX.start;
-input.mouseY.end = window.innerHeight;
-input.mouseY.range = input.mouseY.end - input.mouseY.start;
-};
-
-window.addEventListener("mousemove", handleMouseMove);
-window.addEventListener("resize", handleResize);
+</html>
