trying using the parallax itemOutput

--- a/08:Creating Parallax Effect/index.html
+++ b/08:Creating Parallax Effect/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <div class="parallax-item" data-depth="0.1" style="background-color:black;"></div>
-    <div class="parallax-item" data-depth="0.3" style="background-color:#EF5350;"></div>
-    <div class="parallax-item" data-depth="0.6" style="background-color:#42A5F5;"></div>
+    <div class="parallax-item" data-depth="0.1" style="background-color:hsl(0, 3%, 27%);"></div>
+    <div class="parallax-item" data-depth="0.3" style="background-color:hsl(1, 89%, 72%);"></div>
+    <div class="parallax-item" data-depth="0.6" style="background-color:#66b0ec;"></div>
 </body>
 
 </html>
