02:small refactoring on initialization on input and functions

--- a/08:Creating Parallax Effect/index.html
+++ b/08:Creating Parallax Effect/index.html
@@ -9,18 +9,9 @@
 </head>
 
 <body>
-    <div class="parallax-item" data-depth="0.1" ">
-        <img style=" transform: rotate(30deg);"
-        src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-1.png" alt="">
-    </div>
-    <div class="parallax-item" data-depth="0.3" ">
-        <img style=" transform: rotate(-45deg);"
-        src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-2.png" alt="">
-    </div>
-    <div class="parallax-item" data-depth="0.6" ">
-        <img style=" transform: rotate(110deg);"
-        src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-4.png" alt="">
-    </div>
+    <div class="parallax-item" data-depth="0.1" style="background-color:hsl(0, 3%, 27%);"></div>
+    <div class="parallax-item" data-depth="0.3" style="background-color:hsl(1, 89%, 72%);"></div>
+    <div class="parallax-item" data-depth="0.6" style="background-color:#66b0ec;"></div>
 </body>
 
 </html>
