--- a/09:Making it More Realistic/index.html
+++ b/09:Making it More Realistic/index.html
@@ -11,15 +11,15 @@
 <body>
     <div class="parallax-item" data-depth="0.1" ">
         <img style=" transform: rotate(30deg);"
-        src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-1.png" alt="">
+        src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-1.png">
     </div>
     <div class="parallax-item" data-depth="0.3" ">
         <img style=" transform: rotate(-45deg);"
-        src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-2.png" alt="">
+        src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-2.png">
     </div>
     <div class="parallax-item" data-depth="0.6" ">
         <img style=" transform: rotate(110deg);"
-        src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-4.png" alt="">
+        src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-4.png">
     </div>
 </body>
 
