--- a/10:Making it More Realistic/index.html
+++ b/10:Making it More Realistic/index.html
@@ -37,8 +37,34 @@
             src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-4.png">
         </div>
     </div>
-    <div class="parallax-container"></div>
-    <div class="parallax-container alt"></div>
+    <div class="parallax-container">
+        <div class="parallax-item" data-depth="0.1" ">
+                                    <img style=" transform: rotate(30deg);"
+            src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-1.png">
+        </div>
+        <div class="parallax-item" data-depth="0.3" ">
+                                    <img style=" transform: rotate(-45deg);"
+            src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-2.png">
+        </div>
+        <div class="parallax-item" data-depth="0.9" ">
+                                    <img style=" transform: rotate(110deg);"
+            src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-4.png">
+        </div>
+    </div>
+    <div class="parallax-container alt">
+        <div class="parallax-item" data-depth="0.1" ">
+                                    <img style=" transform: rotate(30deg);"
+            src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-1.png">
+        </div>
+        <div class="parallax-item" data-depth="0.3" ">
+                                    <img style=" transform: rotate(-45deg);"
+            src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-2.png">
+        </div>
+        <div class="parallax-item" data-depth="0.9" ">
+                                    <img style=" transform: rotate(110deg);"
+            src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-4.png">
+        </div>
+    </div>
 </body>
 
 </html>
