--- a/11:Unique Input Values For Each Element/index.html
+++ b/11:Unique Input Values For Each Element/index.html
@@ -1,69 +1,49 @@
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="index.js" defer></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="parallax-container">
-        <div class="parallax-item" data-depth="0.1" ">
-            <img style=" transform: rotate(30deg);"
-            src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-1.png">
-        </div>
-        <div class="parallax-item" data-depth="0.3" ">
-            <img style=" transform: rotate(-45deg);"
-            src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-2.png">
-        </div>
-        <div class="parallax-item" data-depth="0.9" ">
-            <img style=" transform: rotate(110deg);"
-            src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-4.png">
-        </div>
+      <!-- <div class="parallax-item" data-depth="0.1">
+        <img
+          style="transform: rotate(30deg)"
+          src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-1.png"
+        />
+      </div>
+      <div class="parallax-item" data-depth="0.3">
+        <img
+          style="transform: rotate(-45deg)"
+          src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-2.png"
+        />
+      </div>
+      <div class="parallax-item" data-depth="0.9">
+        <img
+          style="transform: rotate(110deg)"
+          src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-4.png"
+        />
+      </div> -->
     </div>
     <div class="parallax-container alt">
-        <div class="parallax-item" data-depth="0.1" ">
-                    <img style=" transform: rotate(30deg);"
-            src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-1.png">
-        </div>
-        <div class="parallax-item" data-depth="0.3" ">
+      <div class="parallax-item" data-depth="0.1">
+        <img
+          style="transform: rotate(30deg)"
+          src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-1.png"
+        />
+      </div>
+      <!-- <div class="parallax-item" data-depth="0.3" ">
                     <img style=" transform: rotate(-45deg);"
             src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-2.png">
         </div>
         <div class="parallax-item" data-depth="0.9" ">
                     <img style=" transform: rotate(110deg);"
             src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-4.png">
-        </div>
+        </div> -->
     </div>
-    <div class="parallax-container">
-        <div class="parallax-item" data-depth="0.1" ">
-                                    <img style=" transform: rotate(30deg);"
-            src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-1.png">
-        </div>
-        <div class="parallax-item" data-depth="0.3" ">
-                                    <img style=" transform: rotate(-45deg);"
-            src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-2.png">
-        </div>
-        <div class="parallax-item" data-depth="0.9" ">
-                                    <img style=" transform: rotate(110deg);"
-            src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-4.png">
-        </div>
-    </div>
-    <div class="parallax-container alt">
-        <div class="parallax-item" data-depth="0.1" ">
-                                    <img style=" transform: rotate(30deg);"
-            src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-1.png">
-        </div>
-        <div class="parallax-item" data-depth="0.3" ">
-                                    <img style=" transform: rotate(-45deg);"
-            src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-2.png">
-        </div>
-        <div class="parallax-item" data-depth="0.9" ">
-                                    <img style=" transform: rotate(110deg);"
-            src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-4.png">
-        </div>
-    </div>
-</body>
-
+    <div class="parallax-container"></div>
+    <div class="parallax-container alt"></div>
+  </body>
 </html>
