03:revert some items

--- a/11:Unique Input Values For Each Element/index.html
+++ b/11:Unique Input Values For Each Element/index.html
@@ -34,14 +34,14 @@
           src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-1.png"
         />
       </div>
-      <!-- <div class="parallax-item" data-depth="0.3" ">
+      <div class="parallax-item" data-depth="0.3" ">
                     <img style=" transform: rotate(-45deg);"
             src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-2.png">
         </div>
         <div class="parallax-item" data-depth="0.9" ">
                     <img style=" transform: rotate(110deg);"
             src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-4.png">
-        </div> -->
+        </div>
     </div>
     <div class="parallax-container"></div>
     <div class="parallax-container alt"></div>
