04:log and adding offsetParent scrollY on itemInput

--- a/11:Unique Input Values For Each Element/index.html
+++ b/11:Unique Input Values For Each Element/index.html
@@ -6,44 +6,52 @@
     <script src="index.js" defer></script>
   </head>
 
-  <body>
-    <div class="parallax-container">
-      <!-- <div class="parallax-item" data-depth="0.1">
-        <img
-          style="transform: rotate(30deg)"
-          src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-1.png"
-        />
-      </div>
-      <div class="parallax-item" data-depth="0.3">
-        <img
-          style="transform: rotate(-45deg)"
-          src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-2.png"
-        />
-      </div>
-      <div class="parallax-item" data-depth="0.9">
-        <img
-          style="transform: rotate(110deg)"
-          src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-4.png"
-        />
-      </div> -->
+<body>
+  <div class="parallax-container">
+    <div class="parallax-item" data-depth="0.1">
+      <img style=" transform: rotate(30deg);" src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-1.png">
     </div>
-    <div class="parallax-container alt">
-      <div class="parallax-item" data-depth="0.1">
-        <img
-          style="transform: rotate(30deg)"
-          src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-1.png"
-        />
-      </div>
-      <div class="parallax-item" data-depth="0.3" ">
-                    <img style=" transform: rotate(-45deg);"
-            src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-2.png">
-        </div>
-        <div class="parallax-item" data-depth="0.9" ">
-                    <img style=" transform: rotate(110deg);"
-            src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-4.png">
-        </div>
+    <div class="parallax-item" data-depth="0.3">
+      <img style=" transform: rotate(-45deg);" src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-2.png">
     </div>
-    <div class="parallax-container"></div>
-    <div class="parallax-container alt"></div>
-  </body>
+    <div class="parallax-item" data-depth="0.9">
+      <img style=" transform: rotate(110deg);" src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-4.png">
+    </div>
+  </div>
+  <div class="parallax-container alt">
+    <div class="parallax-item" data-depth="0.1">
+      <img style="transform: rotate(30deg)" src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-1.png" />
+    </div>
+    <div class="parallax-item" data-depth="0.3">
+      <img style=" transform: rotate(-45deg);" src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-2.png">
+    </div>
+    <div class="parallax-item" data-depth="0.9">
+      <img style=" transform: rotate(110deg);" src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-4.png">
+    </div>
+  </div>
+  <div class="parallax-container">
+    <div class="parallax-item" data-depth="0.5">
+      <img style=" transform: rotate(30deg);" src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-60.png">
+    </div>
+    <div class="parallax-item" data-depth="0.6">
+      <img style=" transform: rotate(-45deg);" src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-61.png">
+    </div>
+    <div class="parallax-item" data-depth="0.1">
+      <img style=" transform: rotate(110deg);" src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-67.png">
+    </div>
+  </div>
+  </div>
+  <div class="parallax-container alt">
+    <div class="parallax-item" data-depth="0.2">
+      <img style=" transform: rotate(30deg);" src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-11.png">
+    </div>
+    <div class="parallax-item" data-depth="0.1">
+      <img style=" transform: rotate(-45deg);" src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-21.png">
+    </div>
+    <div class="parallax-item" data-depth="0">
+      <img style=" transform: rotate(110deg);" src=" https://s3-us-west-2.amazonaws.com/s.cdpn.io/1158400/parallax-asset-41.png">
+    </div>
+  </div>
+  </div>
+</body>
 </html>
